--- a/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork.csproj
@@ -20,6 +20,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,6 +40,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -126,15 +131,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AutoMapperConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ImageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\ImageCommentViewModel.cs" />
+    <Compile Include="ViewModels\UserImagesViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\UserImageViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -146,6 +156,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2-vsdoc.js" />
+    <Content Include="Scripts\images.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -154,6 +165,30 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\css\demo-ie8.css" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\css\demo.css" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\css\jquery.fileupload-noscript.css" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\css\jquery.fileupload-ui-noscript.css" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\css\jquery.fileupload-ui.css" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\css\jquery.fileupload.css" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\css\style.css" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\img\loading.gif" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\img\progressbar.gif" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\app.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\cors\jquery.postmessage-transport.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\cors\jquery.xdr-transport.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\jquery.fileupload-angular.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\jquery.fileupload-audio.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\jquery.fileupload-image.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\jquery.fileupload-jquery-ui.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\jquery.fileupload-process.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\jquery.fileupload-ui.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\jquery.fileupload-validate.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\jquery.fileupload-video.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\jquery.fileupload.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\jquery.iframe-transport.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\main.js" />
+    <Content Include="Scripts\Plugins\jQueryFileUpload\js\vendor\jquery.ui.widget.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
@@ -172,10 +207,12 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Image\Index.cshtml" />
+    <Content Include="Views\Image\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
