--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\CustomMembershipProvider.cs" />
     <Compile Include="Services\BaseService.cs" />
+    <Compile Include="Services\FriendService.cs" />
     <Compile Include="Services\UserImageService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
