--- a/SocialNetwork/Web.config
+++ b/SocialNetwork/Web.config
@@ -19,6 +19,12 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Auth/Login" timeout="1000" name="__Auth" />
     </authentication>
+    <membership defaultProvider="MyMembershipProvider">
+      <providers>
+        <clear />
+        <add name="MyMembershipProvider" type="BusinessLogic.Providers.CustomMembershipProvider" />
+      </providers>
+    </membership>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
