--- a/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\ValueResolvers\CommentValueResolver.cs" />
     <Compile Include="ViewModels\Image\ImageCommentViewModel.cs" />
     <Compile Include="ViewModels\Image\UserImagesViewModel.cs" />
     <Compile Include="Helpers\HtmlHelper.cs" />
