--- a/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork.csproj
@@ -175,6 +175,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\default.gif" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -186,6 +187,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
+    <Content Include="Scripts\Friend\friend.js" />
     <Content Include="Scripts\Image\images.js" />
     <Content Include="Scripts\jquery-2.2.0.js" />
     <Content Include="Scripts\jquery-2.2.0.min.js" />
@@ -246,10 +248,10 @@
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Shared\ProfileInfo.cshtml" />
     <Content Include="Views\Friend\Index.cshtml" />
+    <Content Include="Views\Friend\Modals\RemoveFriendModal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
