--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Providers\CustomMembershipProvider.cs" />
     <Compile Include="Services\BaseService.cs" />
     <Compile Include="Services\FriendService.cs" />
+    <Compile Include="Services\UserImageCommentService.cs" />
     <Compile Include="Services\UserImageService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
