--- a/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork.csproj
@@ -159,7 +159,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\ProfileViewModel.cs" />
+    <Compile Include="ViewModels\Profile\InvitationsListModel.cs" />
     <Compile Include="ViewModels\Profile\ProfileInfoViewModel.cs" />
+    <Compile Include="ViewModels\Profile\ProfileInvitationsViewModel.cs" />
     <Compile Include="ViewModels\RegisterViewModel.cs" />
     <Compile Include="ViewModels\Image\UserImageViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
@@ -257,6 +259,8 @@
     <Content Include="Views\Friend\Modals\AddFriendModal.cshtml" />
     <Content Include="Views\Shared\NotExistingUser.cshtml" />
     <Content Include="Views\Profile\ViewProfile.cshtml" />
+    <Content Include="Views\Profile\ProfileInvitationsList.cshtml" />
+    <Content Include="Views\Shared\MyInvitationsList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
