--- a/SocialNetwork/SocialNetwork.csproj
+++ b/SocialNetwork/SocialNetwork.csproj
@@ -268,6 +268,7 @@
     <Content Include="Views\Profile\ProfileInvitationsList.cshtml" />
     <Content Include="Views\Shared\MyInvitationsList.cshtml" />
     <Content Include="Views\Image\UserImages.cshtml" />
+    <Content Include="Views\Friend\_SearchResultsFriends.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
